--- a/instagram-clone2/app/src/main/res/layout/activity_user_list.xml
+++ b/instagram-clone2/app/src/main/res/layout/activity_user_list.xml
@@ -1,15 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="shareImage"
     tools:context="com.example.kinny.instagram_clone.UserList">
+
+    <Button
+        android:id="@+id/share"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:background="@color/colorPrimary"
+        android:onClick="shareImage"
+        android:text="Share"
+        android:textSize="15dp"
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="4dp" />
+    
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Large"
+        android:id="@+id/progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:foregroundGravity="center"/>
 
     <ListView
         android:id="@+id/userlist"
-        android:layout_width="395dp"
-        android:layout_height="587dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/share"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
-</android.support.constraint.ConstraintLayout>
+    
+</RelativeLayout>
