--- a/instagram-clone2/app/src/main/res/menu/menu_user_list.xml
+++ b/instagram-clone2/app/src/main/res/menu/menu_user_list.xml
@@ -4,5 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context="com.example.kinny.instagram_clone.UserList">
 
     <item android:id="@+id/Logout" android:title="Logout" app:showAsAction="always" />
+    <item android:id="@+id/myfeed" android:title="My Feed" app:showAsAction="always" />
 
 </menu>
