--- a/instagram-clone2/app/src/main/res/layout/activity_main.xml
+++ b/instagram-clone2/app/src/main/res/layout/activity_main.xml
@@ -1,98 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/relativeLayout"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.kinny.instagram_clone.MainActivity">
 
-    <ImageView
-        android:id="@+id/mainPageLogo"
-        android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:ems="10"
-        android:hint="test@gmail.com"
-        android:includeFontPadding="false"
-        android:inputType="textPersonName"
-        android:paddingTop="20dp"
-        tools:layout_editor_absoluteX="191dp"
-        tools:layout_editor_absoluteY="473dp" />
-
-    <EditText
-        android:id="@+id/password"
-        android:paddingTop="20dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:ems="10"
-        android:hint="password"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="191dp"
-        tools:layout_editor_absoluteY="558dp"
-        android:layout_marginTop="22dp"
-        android:layout_below="@+id/email"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/password"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="14dp"
-        android:ems="10"
-        android:hint="username"
-        android:inputType="textPersonName"
-        android:paddingTop="20dp"
-        tools:layout_editor_absoluteX="191dp"
-        tools:layout_editor_absoluteY="558dp" />
-
-    <Button
-        android:id="@+id/LoginSignup"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:background="@color/colorPrimaryDark"
-        android:onClick="signupOrLogin"
-        android:text="Sign Up"
-        android:textColor="@android:color/holo_red_light"
-        android:textSize="25dp"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="642dp"
-        android:layout_above="@+id/changeButtonText"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="8dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/changeButtonText"
-        android:paddingTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Log In"
-        android:textColor="#1d27ff"
-        android:textSize="30dp"
-        tools:layout_editor_absoluteX="259dp"
-        tools:layout_editor_absoluteY="712dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="12dp" />
+        <ImageView
+            android:id="@+id/mainPageLogo"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="6dp"
+            app:srcCompat="@mipmap/logo" />
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:ems="10"
+            android:hint="test@gmail.com"
+            android:includeFontPadding="false"
+            android:inputType="textPersonName"
+            android:paddingTop="20dp" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/email"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="22dp"
+            android:ems="10"
+            android:hint="password"
+            android:inputType="textPassword"
+            android:paddingTop="20dp" />
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/password"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="14dp"
+            android:ems="10"
+            android:hint="username"
+            android:inputType="textPersonName"
+            android:paddingTop="20dp" />
+
+        <Button
+            android:id="@+id/LoginSignup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:background="@color/colorPrimaryDark"
+            android:onClick="signupOrLogin"
+            android:text="Sign Up"
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="25dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_above="@+id/changeButtonText"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/changeButtonText"
+            android:paddingTop="20dp"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:text="Log In"
+            android:textColor="#1d27ff"
+            android:textSize="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="12dp" />
+
+    </RelativeLayout>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
